--- a/exercise07/exercise07_autoencoder.ipynb
+++ b/exercise07/exercise07_autoencoder.ipynb
@@ -40,7 +40,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answers:** **TODO**\n",
+    "**Answers:**\n",
+    "\n",
+    "**a)** \n",
+    "We have six sides, 3 white and 3 black. \n",
+    "\\begin{equation*}\n",
+    "P(x = black) = \\frac{3}{6} = \\frac{1}{2}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "P(x = white) = \\frac{3}{6} = \\frac{1}{2}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "\n",
+    "**b)** B = shows black side, BB = other side is also black / black card\n",
+    "\n",
+    "From a) we have:\n",
+    "\\begin{equation*}\n",
+    "P(B) = \\frac{1}{2}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "We have only one card with two black sides so:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "P(BB) = \\frac{1}{3}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "The probabilty that the card is showing a black side if we have the black card is \n",
+    "\n",
+    "\\begin{equation*}\n",
+    "P(B \\mid BB) = 1\n",
+    "\\end{equation*}\n",
+    "\n",
+    "So we can calculate the wanted probabilty:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "P(BB \\mid B) = \\frac{P(BB) * P(B \\mid BB)}{P(B)} = \\frac{\\frac{1}{3}* 1}{\\frac{1}{2}} = \\frac{2}{3}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "**c)**\n",
+    "\n",
+    "W = shows white side, WB = other side is black / white-black card\n",
+    "\n",
+    "From a) we have:\n",
+    "\\begin{equation*}\n",
+    "P(W) = \\frac{1}{2}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "We have only one card with one black and one white side so:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "P(WB) = \\frac{1}{3}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "The probabilty that the card is showing a white side if we have the white-black card is \n",
+    "\n",
+    "\\begin{equation*}\n",
+    "P(W \\mid WB) = 1\n",
+    "\\end{equation*}\n",
+    "\n",
+    "So we can calculate the wanted probabilty:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "P(WB \\mid W) = \\frac{P(WB) * P(W \\mid WB)}{P(W)} = \\frac{\\frac{1}{3}* 1}{\\frac{1}{2}} = \\frac{2}{3}\n",
+    "\\end{equation*}\n",
     "\n"
    ]
   },
@@ -69,7 +132,135 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answers:** **TODO**\n"
+    "**Answers:**\n",
+    "\n",
+    "**a)**\n",
+    "\n",
+    "\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "p(x) = \\mathcal N(x; \\mu,\\sigma) = \\frac{1}{\\sqrt{2\\pi\\sigma^2}} \\mathrm{e}^{-\\frac{(x-\\mu)^2}{2\\sigma^2}}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\int_{-\\infty}^{\\infty}\\mathcal N(x; \\mu,\\sigma)dx = 1\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\sigma^2 = E[(x-\\mu)^2] =  \\int_{-\\infty}^{\\infty}(x-\\mu)^2\\mathcal N(x; \\mu,\\sigma)dx\n",
+    "\\end{equation*}\n",
+    "\n",
+    "So we can calculate the entropy:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "H = E[-log[p(x)]] = - \\int_{-\\infty}^{\\infty} p(x) ln [p(x)] dx \\\\\n",
+    "= - \\int_{-\\infty}^{\\infty} \\frac{1}{\\sqrt{2\\pi\\sigma^2}} \\mathrm{e}^{-\\frac{(x-\\mu)^2}{2\\sigma^2}} * ln \\left[ \\frac{1}{\\sqrt{2\\pi\\sigma^2}} \\mathrm{e}^{-\\frac{(x-\\mu)^2}{2\\sigma^2}} \\right] dx \\\\\n",
+    "= \\frac{1}{2} ln[2\\pi\\sigma^2] * \\int_{-\\infty}^{\\infty} \\frac{1}{\\sqrt{2\\pi\\sigma^2}} \\mathrm{e}^{-\\frac{(x-\\mu)^2}{2\\sigma^2}}dx + \\frac{1}{2\\sigma^2} * \\int \\frac{1}{\\sqrt{2\\pi\\sigma^2}} * (x-\\mu)^2 * \\mathrm{e}^{-\\frac{(x-\\mu)^2}{2\\sigma^2}}dx \\\\\n",
+    "\\end{equation*}\n",
+    "with the equation above:\n",
+    "\\begin{equation*}\n",
+    "= \\frac{1}{2}ln[2\\pi\\sigma^2] * 1 + \\frac{1}{2\\sigma^2} * \\sigma^2\\\\\n",
+    "= \\frac{1}{2}ln[2\\pi\\sigma^2] + \\frac{1}{2} \\\\\n",
+    "= \\frac{1}{2}(1 + ln[2\\pi\\sigma^2]) \\\\\n",
+    "= \\frac{1}{2}(ln[\\mathrm{e}] + ln[2\\pi\\sigma^2]) \\\\\n",
+    "= \\frac{1}{2}ln[2\\pi\\mathrm{e}\\sigma^2]\n",
+    "\\end{equation*}\n",
+    "\n",
+    "So \n",
+    "\n",
+    "\\begin{equation*}\n",
+    "H = \\frac{1}{2}ln[2\\pi\\mathrm{e}\\sigma^2]\n",
+    "\\end{equation*}\n",
+    "\n",
+    "\n",
+    "\n",
+    "**b)**\n",
+    "<center>\n",
+    "$p(x) = \\mathcal N(\\mu_1, \\sigma_1)$\n",
+    "</center>\n",
+    "<center>\n",
+    "$q(x) = \\mathcal N(\\mu_2, \\sigma_2)$\n",
+    "</center>\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "D_{KL}\\left( \\mathcal N(\\mu_1, \\sigma_1) \\vert\\vert \\mathcal N(\\mu_2, \\sigma_2) \\right) = \\int p(x) * log \\frac{p(x)}{q(x)}dx \\\\\n",
+    "= \\int p(x) * \\left( log [p(x)] - log[q(x)] \\right) dx \\\\\n",
+    "= \\int p(x) * log [p(x)] - p(x) * log[q(x)] dx \\\\\n",
+    "= \\int p(x) * log [p(x)]dx - \\int p(x) * log[q(x)] dx \n",
+    "\\end{equation*}\n",
+    "\n",
+    "\n",
+    "\n",
+    "We know the **first part** from **a)**:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\int p(x)log[p(x)]dx = -\\frac{1}{2}(1 + ln[2\\pi\\sigma_1^2]) \n",
+    "\\end{equation*}\n",
+    "\n",
+    "**Second part**:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "- \\int p(x)log[q(x)]dx \\\\\n",
+    "= - \\int p(x) * log \\left( \\frac{1}{\\sqrt{2\\pi\\sigma_2^2}} \\mathrm{e}^{-\\frac{(x-\\mu_2)^2}{2\\sigma_2^2}} \\right)dx \\\\\n",
+    "= - \\int p(x) * log \\frac{1}{\\sqrt{2\\pi\\sigma_2^2}} dx - \\int p(x) * log \\left(\\mathrm{e}^{-\\frac{(x-\\mu_2)^2}{2\\sigma_2^2}}\\right) dx \\\\\n",
+    "= \\frac{1}{2} log[2\\pi\\sigma_2^2] * \\int p(x)dx - \\int p(x) * log \\left(\\mathrm{e}^{-\\frac{(x-\\mu_2)^2}{2\\sigma_2^2}}\\right) dx \\\\\n",
+    "\\end{equation*}\n",
+    "\n",
+    "with \n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\int_{-\\infty}^{\\infty}\\mathcal N(x; \\mu,\\sigma)dx = 1\n",
+    "\\end{equation}\n",
+    "\n",
+    "we get\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "= \\frac{1}{2} log[2\\pi\\sigma_2^2] * 1 - \\int p(x) * log \\left(\\mathrm{e}^{-\\frac{(x-\\mu_2)^2}{2\\sigma_2^2}}\\right) dx \\\\\n",
+    "= \\frac{1}{2} log[2\\pi\\sigma_2^2] - \\int p(x) * \\left({-\\frac{(x-\\mu_2)^2}{2\\sigma_2^2}}\\right) dx \\\\\n",
+    "\\end{equation*}\n",
+    "\n",
+    "and with\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\int p(x) * \\left({-\\frac{(x-\\mu_2)^2}{2\\sigma_2^2}}\\right) dx \\\\\n",
+    "= \\int p(x) * \\left( -\\frac{(x^2-2\\mu_2x+\\mu_2^2)}{2\\sigma_2^2} \\right)dx \\\\\n",
+    "= -\\frac{1}{2\\sigma_2^2} \\int p(x)x^2-p(x)2\\mu_2x+p(x)\\mu_2^2 dx \\\\\n",
+    "= -\\frac{1}{2\\sigma_2^2} \\left( \\int p(x)x^2 dx - \\int p(x)2\\mu_2x dx +\\int p(x)\\mu_2^2 dx \\right)\\\\\n",
+    "= -\\frac{1}{2\\sigma_2^2} \\left( E(x^2) - E(x)2\\mu_2 + \\mu_2^2 \\right)\\\\\n",
+    "\\end{equation*}\n",
+    "\n",
+    "we know:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\sigma^2 = E(x^2) - E(x)^2\\\\\n",
+    "E(x^2) = \\sigma_1^2 + E(x)^2\\\\\n",
+    "= \\sigma_1^2 + \\mu_1^2\n",
+    "\\end{equation*}\n",
+    "\n",
+    "so we get:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "= -\\frac{1}{2\\sigma_2^2} \\left( \\sigma_1^2 + \\mu_1^2 - 2\\mu_1\\mu_2 + \\mu_2^2 \\right)\\\\\n",
+    "\\int p(x) * \\left({-\\frac{(x-\\mu_2)^2}{2\\sigma_2^2}}\\right) dx = -\\frac{1}{2\\sigma_2^2} \\left( \\sigma_1^2 + (\\mu_1-\\mu_2)^2 \\right)\\\\\n",
+    "\\end{equation*}\n",
+    "\n",
+    "if we put it all together we get for the **second part**:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "- \\int p(x)log[q(x)]dx \\\\\n",
+    "= \\frac{1}{2} log[2\\pi\\sigma_2^2] +  \\frac{\\sigma_1^2 + (\\mu_1-\\mu_2)^2}{2\\sigma_2^2} \\\\\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Then we get the Kullback Leibler divergence:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "D_{KL}\\left( \\mathcal N(\\mu_1, \\sigma_1) \\vert\\vert \\mathcal N(\\mu_2, \\sigma_2) \\right) = \\int p(x) * log \\frac{p(x)}{q(x)}dx \\\\\n",
+    "= \\int p(x) * log [p(x)]dx - \\int p(x) * log[q(x)] dx \\\\\n",
+    "= -\\frac{1}{2}(1 + log[2\\pi\\sigma_1^2]) + \\frac{1}{2} log[2\\pi\\sigma_2^2] +  \\frac{\\sigma_1^2 + (\\mu_1-\\mu_2)^2}{2\\sigma_2^2} \\\\\n",
+    "= -\\frac{1}{2} - \\frac{1}{2} log[2\\pi\\sigma_1^2] + \\frac{1}{2} log[2\\pi\\sigma_2^2] +  \\frac{\\sigma_1^2 + (\\mu_1-\\mu_2)^2}{2\\sigma_2^2} \\\\\n",
+    "= -\\frac{1}{2} + log\\frac{\\sigma_2^2}{\\sigma_1^2} + \\frac{\\sigma_1^2 + (\\mu_1-\\mu_2)^2}{2\\sigma_2^2}\n",
+    "\\end{equation*}\n",
+    "\n"
    ]
   },
   {
@@ -792,7 +983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
